--- a/src/Signup/Signup.css
+++ b/src/Signup/Signup.css
@@ -42,3 +42,10 @@
 .form button:hover {
   background-color: #417fe0;
 }
+
+.input-error {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 4px;
+  margin-bottom: 8px;
+}
