--- a/src/Signup/Signup.css
+++ b/src/Signup/Signup.css
@@ -49,3 +49,22 @@
   margin-top: 4px;
   margin-bottom: 8px;
 }
+.password-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.password-wrapper input {
+  flex: 1;
+  padding-right: 40px;
+}
+
+.toggle-password-btn {
+  position: absolute;
+  right: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+}
